Создано с помощью Colaboratory

--- a/sky_segmentation_pytorch.ipynb
+++ b/sky_segmentation_pytorch.ipynb
@@ -689,7 +689,7 @@
         "        unet_input_fake = torch.cat((rgb_images.cuda(), outputs.cuda()), dim=1).cuda()\n",
         "        unet_fake, unet_fake_feat = self.discriminator(unet_input_fake)\n",
         "        unet_gan_loss = self.adversarial_loss(unet_fake, True, False) * 1.0\n",
-        "        print('BBBB ' + str(unet_gan_loss.cpu().item()))\n",
+        "        #print('BBBB ' + str(unet_gan_loss.cpu().item()))\n",
         "        unet_loss += unet_gan_loss\n",
         "\n",
         "        unet_criterion = self.criterion(outputs.cuda(), mask_images.cuda())\n",
@@ -747,7 +747,6 @@
         "        unet_loss_dil.backward()\n",
         "        self.unet_dil_optimizer.step()\n",
         "\n",
-        "    '''\n",
         "    def predict(self, rgb_images, edge_images):\n",
         "      input_unet = torch.cat((rgb_images.cuda(), edge_images.cuda()), dim=1).cuda()\n",
         "      predict_mask = self.unet(input_unet)\n",
@@ -755,23 +754,21 @@
         "      input_unet_dil = torch.cat((rgb_images.cuda(), predict_mask.cuda()), dim=1).cuda()\n",
         "      predict_mask_dil = self.unet_dil(input_unet_dil)\n",
         "      return predict_mask_dil\n",
-        "    '''\n",
         "\n",
         "    def predict(self, rgb_images):\n",
         "      predict_mask = self.unet(rgb_images.cuda())\n",
         "      return predict_mask\n",
         "\n",
         "    def train(self, max_epoch, max_epoch_dil):\n",
-        "      i=0\n",
+        "      i = 0\n",
         "      for epoch in range(max_epochs):\n",
         "          for rgb_images, mask_images, edge_images in train_loader:\n",
         "              unet_loss, dis_loss = self.process(rgb_images.cuda(), mask_images.cuda(), edge_images.cuda())\n",
-        "              print(\"AAAAAAAA \" + str(unet_loss.cpu().item())+ \" : \" + str(dis_loss.cpu().item()))\n",
         "              self.backward(unet_loss.cuda(), dis_loss.cuda())\n",
         "              print(str(i) + \" \" + str(unet_loss.cpu().item())+ \" : \" + str(dis_loss.cpu().item()))\n",
         "              i += 1\n",
         "\n",
-        "      i=0\n",
+        "      i = 0\n",
         "      for epoch in range(max_epochs):\n",
         "          for rgb_images, mask_images, edge_images in train_loader:\n",
         "              input_unet_dil = torch.cat((rgb_images.cuda(), edge_images.cuda()), dim=1).cuda()\n",
