Создано с помощью Colaboratory

--- a/sky_segmentation_pytorch.ipynb
+++ b/sky_segmentation_pytorch.ipynb
@@ -1139,6 +1139,7 @@
         "from torch.utils import data\n",
         "import pandas as pd\n",
         "\n",
+        "#df = pd.read_csv('/content/gdrive/MyDrive/Colab Notebooks/dataset1.csv')\n",
         "df = pd.read_csv('dataset1.csv')\n",
         "df.head()"
       ]
